# Cadastral.Service.API

./: .dockerignore  .env.example  .gitignore  Dockerfile  Readme.md  config.py  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: 48e6db743bee_.py  a8866d20e0e6_.py
server/: Dockerfile  main.py
src/: Dockerfile  config.py  main.py  requirements.txt  utils.py
src/migrations/: env.py
src/migrations/versions/: 59f09f2b389e_.py
src/repository/: crud.py  database.py  models.py
src/routers/: routers.py
src/schemas/: cadastral.py
